syntax = "proto3";

option go_package = "./;resource";

package resource;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ResourceService {
  rpc AddResource (AddResourceRequest) returns (AddResourceReply) {
    option (google.api.http) = {
      post: "/v1/api/resource"
      body: "*"
    };
  }

  rpc EditResource (UpdateResourceRequest) returns (UpdateResourceReply) {
    option (google.api.http) = {
      put: "/v1/api/resource/{id}"
      body: "*"
    };
  }

  rpc DeleteResource (DeleteResourceRequest) returns (DeleteResourceReply) {
    option (google.api.http) = {
      delete: "/v1/api/resource/{id}"
    };
  }

  rpc GetResourceById (GetOneResourceRequest) returns (GetOneResourceReply) {
    option (google.api.http) = {
      get: "/v1/api/resource/{id}"
    };
  }

  rpc GetResourceByPage (GetPageResourceRequest) returns (GetPageResourceReply) {
    option (google.api.http) = {
      post: "/v1/api/resource/getByPage"
      body: "*"
    };
  }

  rpc GetAllResources (GetAllResourceRequest) returns (GetAllResourceReply) {
    option (google.api.http) = {
      post: "/v1/api/resource/getAll"
      body: "*"
    };
  }
}

message AddResourceRequest {
  string parentId = 1;
  int64 resourceType = 2;
  string name = 3;
  string content = 4;
}
message AddResourceReply {
  int64 code = 1;
  string msg = 2;
  ResourceReply data = 3;
}

message UpdateResourceRequest {
  string id = 1;
  AddResourceRequest data = 2;
}
message UpdateResourceReply {
  int64 code = 1;
  string msg = 2;
  ResourceReply data = 3;
}

message DeleteResourceRequest {
  string id = 1;
}
message DeleteResourceReply {
  int64 code = 1;
  string msg = 2;
}

message GetOneResourceRequest {
  string id = 1;
}
message GetOneResourceReply {
  int64 code = 1;
  string msg = 2;
  ResourceReply data = 3;
}

message GetPageResourceRequest {
  int64 page = 1;
  int64 pageSize = 2;
}
message GetPageResourceReply {
  repeated ResourceReply list = 1;
  PageInfoReply page = 2;
  int64 code = 3;
  string msg = 4;

}

message GetAllResourceRequest {

}
message GetAllResourceReply {
  repeated ResourceReply list = 1;
  int64 code = 3;
  string msg = 4;
}

message ResourceReply {
  string id = 1;
  string parentId = 2;
  int64 resourceType = 3;
  string name = 4;
  string content = 5;
  google.protobuf.Timestamp lastUpdatedAt = 6;
}

message PageInfoReply {
  int64 total = 1;
  int64 page = 2;
  int64 pageSize = 3;
}